--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 		"gh-pages": "^2.1.1",
 		"react": "^16.9.0",
 		"react-dom": "^16.9.0",
+		"react-id-generator": "^2.0.0",
 		"react-scripts": "3.1.1"
 	},
 	"scripts": {
