--- a/package.json
+++ b/package.json
@@ -21,8 +21,16 @@
 		"extends": "react-app"
 	},
 	"browserslist": {
-		"production": [ ">0.2%", "not dead", "not op_mini all" ],
-		"development": [ "last 1 chrome version", "last 1 firefox version", "last 1 safari version" ]
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
 	},
 	"homepage": "https://poengen.github.io/tic-tac-toe",
 	"description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
