--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,9 @@ jobs:
   build:
     docker:
       # specify the version you desire here
-      - image: circleci/node:8.10
+      - image: circleci/node:12
+        environment:
+          NODE_ENV: development
 
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
